fixed css bug on mobile

--- a/style.css
+++ b/style.css
@@ -27,7 +27,6 @@ body h1 {
   font-size: 12rem;
   color: #fff;
   text-shadow: 2px 2px 3px #000;
-  position: absolute;
   top: 8rem;
   letter-spacing: -8px;
 }
